; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/dsa/b53/extr_b53_serdes.c_b53_serdes_set_lane.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/dsa/b53/extr_b53_serdes.c_b53_serdes_set_lane.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.b53_device = type { i32 }

@B53_SERDES_LANE = common dso_local global i32 0, align 4
@SERDES_XGXSBLK0_BLOCKADDRESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.b53_device*, i32)* @b53_serdes_set_lane to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @b53_serdes_set_lane(%struct.b53_device* %0, i32 %1) #0 {
  %3 = alloca %struct.b53_device*, align 8
  %4 = alloca i32, align 4
  store %struct.b53_device* %0, %struct.b53_device** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.b53_device*, %struct.b53_device** %3, align 8
  %6 = getelementptr inbounds %struct.b53_device, %struct.b53_device* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load i32, i32* %4, align 4
  %9 = icmp eq i32 %7, %8
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  br label %24

11:                                               ; preds = %2
  %12 = load i32, i32* %4, align 4
  %13 = icmp sgt i32 %12, 1
  %14 = zext i1 %13 to i32
  %15 = call i32 @WARN_ON(i32 %14)
  %16 = load %struct.b53_device*, %struct.b53_device** %3, align 8
  %17 = load i32, i32* @B53_SERDES_LANE, align 4
  %18 = load i32, i32* @SERDES_XGXSBLK0_BLOCKADDRESS, align 4
  %19 = load i32, i32* %4, align 4
  %20 = call i32 @b53_serdes_write_blk(%struct.b53_device* %16, i32 %17, i32 %18, i32 %19)
  %21 = load i32, i32* %4, align 4
  %22 = load %struct.b53_device*, %struct.b53_device** %3, align 8
  %23 = getelementptr inbounds %struct.b53_device, %struct.b53_device* %22, i32 0, i32 0
  store i32 %21, i32* %23, align 4
  br label %24

24:                                               ; preds = %11, %10
  ret void
}

declare dso_local i32 @WARN_ON(i32) #1

declare dso_local i32 @b53_serdes_write_blk(%struct.b53_device*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
